add-exports to scalatest run for Java 17 compatibility